--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,11 @@
   }
 }
 
+* {
+  outline: none;
+  border: none;
+}
+
 .mesh-bg {
   background-color: hsla(352.6829268292683, 100%, 59%, 1);
   background-image: radial-gradient(circle at 47% 50%, hsla(240, 9%, 22%, 1) 81.57180487428948%, transparent 128.40267573445306%);
